aux_source_directory(. DIR_SRCS)
aux_source_directory(../../engin DIR_SRCS)
aux_source_directory(../../util DIR_SRCS)
aux_source_directory(../../net/http_client DIR_SRCS)
add_executable(curltest ${DIR_SRCS})
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -std=c++11 -lpthread -lcurl -DDEBUG_BUILD -DENABLE_HTTP_PLUGIN")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++11 -lpthread -lcurl -DENABLE_HTTP_PLUGIN")
target_link_libraries(curltest chroutine)